--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/src/style.css">
-    <link rel="stylesheet" href="/src/fonts.css ">
+    <link rel="stylesheet" href="/fonts/fonts.css" ">
 </head>
 <body>
-    <section class="banner">
+    <section class="banner">       
         <div class="slider">
+            <a href="index.html">Roca.</a>
+            <h3>About me</h3>
+            <div class="info-content">
+                <p>Hi, I'm</p>
+                <h4>Noe Kvirkvelia</h4>
+                <p class="about">I am Frontend Developer</p>
+                <div class="icn-container">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
             <div class="slide active">
               <img src="images/pics/1.jpg" alt="Image">  
             </div>
