--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
 <body>
     <section class="banner">       
         <div class="slider">
-            <a href="index.html">Roca.</a>
+            <a href="index.html" class="roca">Roca.</a>
             <h3>About me</h3>
             <div class="info-content">
                 <p>Hi, I'm</p>
                 <h4>Noe Kvirkvelia</h4>
                 <p class="about">I am Frontend Developer</p>
                 <div class="icn-container">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <a href="https://www.instagram.com/noahfisherrrr/" target="_blank" rel="noopener noreferrer">
+                        <img src="images/pics/instagram.svg" alt="instagram">
+                    </a>
+                    <a href="https://www.linkedin.com/in/noah-kvirkvelia/" target="_blank" rel="noopener noreferrer">
+                        <img src="images/pics/linkedin.svg" alt="linkedin">
+                    </a>
+                    <a href="mailto:kvirkvelianoah@gmail.com" target="_blank" rel="noopener noreferrer">
+                       <img src="images/pics/gmail.svg" alt="gmail">
+                    </a>
+                    <a href="https://github.com/Noahfisherrrr" target="_blank" rel="noopener noreferrer">
+                        <img src="images/pics/github.svg" alt="github">
+                    </a>                    
                 </div>
             </div>
             <div class="slide active">
