--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/src/style.css">
-    <link rel="stylesheet" href="/fonts/fonts.css" ">
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="fonts/fonts.css" ">
 </head>
 <body>
     <section class="banner">       
@@ -50,6 +50,13 @@
                 <button class="nextBtn">&#10095;</button>
             </div>
     </section>
+    <section class="detail-info">
+        <div class="aboutMe">
+
+        </div>
+        <div class="profImage"></div>
+        <div class="skills"></div>
+    </section>
 
     
 
@@ -59,5 +66,5 @@
 </body>
 
 
-<script src="/src/app.js"></script>
+<script src="src/app.js"></script>
 </html>
