--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="src/style.css">
-    <link rel="stylesheet" href="fonts/fonts.css" ">
+    <link rel="stylesheet" href="fonts/fonts.css">
 </head>
 <body>
     <section class="banner">       
@@ -126,7 +126,7 @@
         </div>
         <div class="sec-info-cont">
             <div class="sec-info-logo">
-                 <a href="https://maps.app.goo.gl/2FpbV25PX65UKQ6K7" target="_blank" >
+                <a href="https://maps.app.goo.gl/2FpbV25PX65UKQ6K7" target="_blank" >
                     <img src="images/2.svg" alt="location favicon">
                 </a>   
             </div>
@@ -147,13 +147,112 @@
             </div>
         </div>
     </div>
-    
+    <section class="services">
+        <div class="serv-grid">
+            <div class="service-item">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h3>Website Development</h3>
+                        <i data-lucide="code" class="icon"></i>
+                    </div>
+                    <div class="card-back">                       
+                        <p>Responsive websites built using HTML, CSS, and JavaScript. Each project is tailored to meet your brand's identity and is fully optimized for speed, performance, and accessibility.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-item">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h3>Content Placement</h3>
+                        <i data-lucide="file-text" class="icon"></i>
+                    </div>
+                    <div class="card-back">
+                        <p>Seamless integration of your content—blogs, news, product details, and more—structured properly with SEO best practices, formatting, and accessibility in mind.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-item">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h3>Technical Support</h3>
+                        <i data-lucide="life-buoy" class="icon"></i>
+                    </div>
+                    <div class="card-back">
+                        <p>Ongoing maintenance and troubleshooting to ensure your site runs smoothly. Includes bug fixing, uptime monitoring, and regular security updates as needed.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-item">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h3>UI/UX Design</h3>
+                        <i data-lucide="layout" class="icon"></i>
+                    </div>
+                    <div class="card-back">
+                        <p>Designing intuitive user interfaces and experiences that engage users. Includes wireframing, prototyping, and ensuring consistency across all devices and platforms.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-item">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h3>Website Redesign</h3>
+                        <i data-lucide="refresh-ccw" class="icon"></i>
+                    </div>
+                    <div class="card-back">
+                        <p>Transforming outdated websites into modern, visually engaging, and high-performing platforms. Focused on usability, aesthetics, and faster load times.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-item">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h3>SEO Optimization</h3>
+                        <i data-lucide="search" class="icon"></i>
+                    </div>
+                    <div class="card-back">
+                        <p>Enhancing your site's visibility in search engines through on-page SEO, semantic HTML structure, metadata optimization, and performance enhancements.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-item">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h3>Extra Pages</h3>
+                        <i data-lucide="file-plus" class="icon"></i>
+                    </div>
+                    <div class="card-back">
+                        <p>Creating custom pages such as About, Services, Contact, FAQ, Terms, and more—all styled to match your site's design while providing necessary functionality.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="service-item">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h3>User Assistance</h3>
+                        <i data-lucide="help-circle" class="icon"></i>
+                    </div>
+                    <div class="card-back">
+                        <p>Providing consulting and support for end users, including guidance, documentation, chat integration, or direct answers to their queries via your website.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 
 
 
 </body>
 
-
+<script src="https://unpkg.com/lucide@latest"></script>
 <script src="src/app.js"></script>
 </html>
