--- a/index.html
+++ b/index.html
@@ -247,6 +247,24 @@
         </div>
 
     </section>
+    <section class="review-section">
+        <div class="review">
+            <p id="review-text">"This is a placeholder review."</p>
+            <div class="profile">
+                <div class="avatar" id="review-avatar">
+                </div>   
+            </div>
+            <div class="info">
+                    <span id="review-title">Web Developer</span>
+                    <h3 id="review-name">John Doe</h3>
+                </div>
+            <div class="dots">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </div>
+    </section>
 
 
 
