--- a/index.html
+++ b/index.html
@@ -265,6 +265,45 @@
             </div>
         </div>
     </section>
+    <section class="recent-projects">
+        <h2>Latest Projects</h2>
+        <div class="projects-container">
+            <!-- Sidebar -->
+            <aside class="sidebar">
+                <ul class="categories">
+                    <li class="active" data-filter="all">All</li>
+                    <li data-filter="frontend">Frontend Projects</li>
+                    <li data-filter="fullstack">Fullstack Projects</li>
+                    <li data-filter="landing">Landing Pages</li>
+                    <li data-filter="design">UI/UX Concepts</li>
+                    <li data-filter="tools">JavaScript Tools</li>
+                </ul>
+            </aside>
+
+            <!-- Projects Grid -->
+            <div class="projects-grid">
+                <div class="project-card" data-category="frontend tools">
+                    <div class="project-image">
+                        <img src="images/pics/MET.png" alt="Calorie Counter">
+                        <div class="overlay"><h4>Calorie Counter</h4></div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="fullstack design">
+                    <div class="project-image">
+                        <img src="images/pics/realEstate.png" alt="Real Estate App">
+                        <div class="overlay"><h4>Real Estate App</h4></div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="landing">
+                    <div class="project-image">
+                        <img src="images/pics/devCo.png" alt="SkyHouse">
+                        <div class="overlay"><h4>SkyHouse Site</h4></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
