--- a/index.html
+++ b/index.html
@@ -303,7 +303,43 @@
             </div>
         </div>
     </section>
-
+    <section class="latest-articles">
+        <h2>Latest Articles</h2>
+        <div class="articles-container">
+            <article class="article-container">
+                <h3>Smart Calorie Counter for Cyclists</h3>
+                <p>This web app helps cyclists estimate calorie burn based on ride intensity, elevation, and duration. 
+                    It uses dynamic MET calculations and a user-friendly interface to deliver accurate and personalized insights.</p>
+            </article>
+            <div class="year"><span>2024</span></div>
+            <div class="article-image">
+                <img src="images/pics/MET.png" alt="Calorie Counter">
+            </div>
+        </div>
+        <div class="article-float">
+            <article class="article-container">
+                <h3>Real Estate Marketplace Platform</h3>
+                <p>A clean and modern web platform built for property listings and searches. 
+            Features include filtering, responsive design, and dynamic data loading. 
+            Ideal for agencies or freelance property managers.</p>
+            </article>
+            <div class="year"><span>2024</span></div>
+            <div class="article-image">
+                <img src="images/pics/realEstate2.png" alt="Real Estate Marketplace Platform">
+            </div>
+        </div>
+        <div class="articles-container">
+            <article class="article-container">
+                <h3>SkyHouse — Construction Company Website</h3>
+                <p>A modern company website with sections for services, projects, contact, and about. 
+            Built with clean design principles and responsive layout, this project showcases how a digital presence can reflect a brand's professionalism.</p>
+            </article>
+            <div class="year"><span>2024</span></div>
+            <div class="article-image">
+                <img src="images/pics/devCo.png" alt="SkyHouse — Construction Company Website">
+            </div>
+        </div>
+    </section>
 
 
 
