--- a/index.html
+++ b/index.html
@@ -340,8 +340,107 @@
             </div>
         </div>
     </section>
+    <section class="partners">
+        <h2>Partner Companies</h2>
+        <div class="partners-container">
+            
+            <div class="partner-logo">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="images/pics/apachemaven.svg" alt="Partner 1">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="partner-logo">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="images/pics/boehringeringelheim.svg" alt="Partner 1">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="partner-logo">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="images/pics/counterstrike.svg" alt="Partner 1">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="partner-logo">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="images/pics/mediamarkt.svg" alt="Partner 1">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="partner-logo">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="images/pics/pythonanywhere.svg" alt="Partner 1">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+
+<footer class="footer-container">
+    <h3>CONTACT US</h3>
+    <div class="messageoform">
+        <form id="contactForm" action="https://borjomi.loremipsum.ge/api/send-message" method="post">
+                <label class="fullname"></label>
+                    <input type="text" name="name" required placeholder="Your Name">
+                </label>
+
+                <label class="email">
+                    <input type="email" name="email" required placeholder="Email Address">
+                </label>
+
+                <label class="website">
+                    <input type="text" name="website" required placeholder="Your Website">
+                </label>
+            <label class="message">
+                <textarea name="message" rows="4" required placeholder="Your Message"></textarea>
+            </label>
+
+            <button type="submit">SEND MESSAGE</button>
+        </form>
+    </div>
+    <div id="thankYouModal" class="modal">
+        <div class="modal-content">
+            <p>Thank you for getting in touch! We appreciate you contacting us.</p>
+            <button>Close</button>
+        </div>
+    </div>
+</footer>
+    
 
 
 </body>
