ready for media

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 <div class="project-card" data-category="fullstack design">
                     <div class="project-image">
                         <img src="images/pics/realEstate.png" alt="Real Estate App">
-                        <div class="overlay"><a href="http://" target="_blank" rel="noopener noreferrer">Real Estate App</a></div>
+                        <div class="overlay"><a href="https://noahfisherrrr.github.io/realEstateMarketplace/" target="_blank" rel="noopener noreferrer">Real Estate App</a></div>
                     </div>
                 </div>
                 <div class="project-card" data-category="landing">
