--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="fonts/fonts.css">
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Portfolio of Noe Kvirkvelia - Frontend Developer with experience in HTML, CSS, JavaScript, and UI/UX design. Explore projects, services, and contact information.">
+    <meta name="keywords" content="Frontend Developer, Web Developer, Portfolio, HTML, CSS, JavaScript, UI/UX, Tbilisi, Freelance Developer, Responsive Websites, Noe Kvirkvelia">
+    <meta name="author" content="Noe Kvirkvelia">
+    <link rel="canonical" href="https://yourdomain.com/" />
+
+    <!-- Open Graph (for social sharing) -->
+    <meta property="og:title" content="Noe Kvirkvelia - Frontend Developer Portfolio">
+    <meta property="og:description" content="Explore my professional frontend portfolio including projects, services, and contact details.">
+    <meta property="og:image" content="https://yourdomain.com/images/pics/1.jpg">
+    <meta property="og:url" content="https://yourdomain.com/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Noe Kvirkvelia - Frontend Developer">
+    <meta name="twitter:description" content="Professional frontend developer based in Tbilisi. Portfolio of projects, articles, and services.">
+    <meta name="twitter:image" content="https://yourdomain.com/images/pics/1.jpg">
+
 </head>
 <body>
     <section class="banner">       
