--- a/index.html
+++ b/index.html
@@ -118,21 +118,21 @@
             <div class="skill" data-percent="90">
                 <p class="skill-name">HTML<span>(90%)</span></p>
             <div class="bar">
-            <div class="fill"></div>
+                <div class="fill"></div>
             </div>
             </div>
 
             <div class="skill" data-percent="80">
                 <p class="skill-name">CSS<span>(80%)</span></p>
                 <div class="bar">
-                <div class="fill"></div>
+                    <div class="fill"></div>
                 </div>
             </div>
 
             <div class="skill" data-percent="60">
                 <p class="skill-name">JavaScript<span>(60%)</span></p>
                 <div class="bar">
-                <div class="fill"></div>
+                    <div class="fill"></div>
                 </div>
             </div>
         </div>
@@ -157,7 +157,7 @@
                 </a>   
             </div>
             <div class="sec-info-det">
-                <h4>user Address</h4>
+                <h4>Address</h4>
                 <a href="https://maps.app.goo.gl/2FpbV25PX65UKQ6K7" target="_blank">Tbilisi, Georgia</a>
             </div>
         </div>
@@ -331,38 +331,44 @@
     </section>
     <section class="latest-articles">
         <h2>Latest Articles</h2>
-        <div class="articles-container">
-            <article class="article-container">
-                <h3>Smart Calorie Counter for Cyclists</h3>
-                <p>This web app helps cyclists estimate calorie burn based on ride intensity, elevation, and duration. 
-                    It uses dynamic MET calculations and a user-friendly interface to deliver accurate and personalized insights.</p>
-            </article>
-            <div class="year"><span>2024</span></div>
-            <div class="article-image">
-                <img src="images/pics/MET.png" alt="Calorie Counter">
+        <div class="articles-content-container">
+            <div class="article-container">
+                <div class="empty-space"></div>
+                <div class="article-info">
+                    <h3>Smart Calorie Counter for Cyclists</h3>
+                    <p>This web app helps cyclists estimate calorie burn based on ride intensity, elevation, and duration. 
+                        It uses dynamic MET calculations and a user-friendly interface to deliver accurate and personalized insights.</p>
+                    </div>
+                <div class="year"><span>2024</span></div>
+                <div class="article-image">
+                    <img src="images/pics/MET.png" alt="Calorie Counter">
+                </div>
             </div>
-        </div>
-        <div class="article-float">
-            <article class="article-container">
-                <h3>Real Estate Marketplace Platform</h3>
-                <p>A clean and modern web platform built for property listings and searches. 
-            Features include filtering, responsive design, and dynamic data loading. 
-            Ideal for agencies or freelance property managers.</p>
-            </article>
-            <div class="year"><span>2024</span></div>
-            <div class="article-image">
-                <img src="images/pics/realEstate2.png" alt="Real Estate Marketplace Platform">
+            <div class="article-float">
+                <div class="empty-space"></div>
+                <div class="article-info">
+                    <h3>Real Estate Marketplace Platform</h3>
+                    <p>A clean and modern web platform built for property listings and searches. 
+                Features include filtering, responsive design, and dynamic data loading. 
+                Ideal for agencies or freelance property managers.</p>
+                </div>
+                <div class="year"><span>2024</span></div>
+                <div class="article-image">
+                    <img src="images/pics/realEstate2.png" alt="Real Estate Marketplace Platform">
+                </div>
             </div>
-        </div>
-        <div class="articles-container">
-            <article class="article-container">
-                <h3>SkyHouse — Construction Company Website</h3>
-                <p>A modern company website with sections for services, projects, contact, and about. 
-            Built with clean design principles and responsive layout, this project showcases how a digital presence can reflect a brand's professionalism.</p>
-            </article>
-            <div class="year"><span>2024</span></div>
-            <div class="article-image">
-                <img src="images/pics/devCo.png" alt="SkyHouse — Construction Company Website">
+            <div class="article-container">
+                <div class="empty-space"></div>
+
+                <article class="article-info">
+                    <h3>SkyHouse — Construction Company Website</h3>
+                    <p>A modern company website with sections for services, projects, contact, and about. 
+                Built with clean design principles and responsive layout, this project showcases how a digital presence can reflect a brand's professionalism.</p>
+                </article>
+                <div class="year"><span>2024</span></div>
+                <div class="article-image">
+                    <img src="images/pics/devCo.png" alt="SkyHouse — Construction Company Website">
+                </div>   
             </div>
         </div>
     </section>
