--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <i data-lucide="file-text" class="icon"></i>
                     </div>
                     <div class="card-back">
-                        <p>Seamless integration of your content—blogs, news, product details, and more—structured properly with SEO best practices, formatting, and accessibility in mind.</p>
+                        <p>Seamless integration of your content blogs, news, product details, and more structured properly with SEO best practices, formatting, and accessibility in mind.</p>
                     </div>
                 </div>
             </div>
