removed lates articles and changed visual side of filter

--- a/index.html
+++ b/index.html
@@ -311,67 +311,44 @@
                 <div class="project-card" data-category="frontend tools">
                     <div class="project-image">
                         <img src="images/pics/MET.png" alt="Calorie Counter">
-                        <div class="overlay"><a href="https://noahfisherrrr.github.io/MET/" target="_blank" rel="noopener noreferrer">Calorie Counter</a></div>
+                        <div class="overlay">
+                            <a href="https://noahfisherrrr.github.io/MET/" target="_blank" rel="noopener noreferrer">
+                            <ins>Calorie Counter</ins><br>
+                            This web app helps cyclists estimate calorie burn based on ride intensity, elevation, and duration. 
+                            It uses dynamic MET calculations and a user-friendly interface to deliver accurate and personalized insights.</a>
+                            
+                        </div>
                     </div>
                 </div>
                 <div class="project-card" data-category="fullstack design">
                     <div class="project-image">
                         <img src="images/pics/realEstate.png" alt="Real Estate App">
-                        <div class="overlay"><a href="https://noahfisherrrr.github.io/realEstateMarketplace/" target="_blank" rel="noopener noreferrer">Real Estate App</a></div>
+                        <div class="overlay">
+                            <a href="https://noahfisherrrr.github.io/realEstateMarketplace/" target="_blank" rel="noopener noreferrer">
+                            <ins>Real Estate App</ins><br>
+                            A clean and modern web platform built for property listings and searches. 
+                            Features include filtering, responsive design, and dynamic data loading. 
+                            Ideal for agencies or freelance property managers.
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="project-card" data-category="landing">
                     <div class="project-image">
                         <img src="images/pics/devCo.png" alt="SkyHouse">
-                        <div class="overlay"><a href="https://noahfisherrrr.github.io/sky-house/" target="_blank" rel="noopener noreferrer">SkyHouse Website</a></div>
+                        <div class="overlay"><a href="https://noahfisherrrr.github.io/sky-house/" target="_blank" rel="noopener noreferrer">
+                            <ins>SkyHouse Website</ins><br>
+                            A modern company website with sections for services, projects, contact, and about. 
+                            Built with clean design principles and responsive layout, 
+                            this project showcases how a digital presence can reflect a brand's professionalism.
+                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="latest-articles">
-        <h2>Latest Articles</h2>
-        <div class="articles-content-container">
-            <div class="article-container">
-                <div class="empty-space"></div>
-                <div class="article-info">
-                    <h3>Smart Calorie Counter for Cyclists</h3>
-                    <p>This web app helps cyclists estimate calorie burn based on ride intensity, elevation, and duration. 
-                        It uses dynamic MET calculations and a user-friendly interface to deliver accurate and personalized insights.</p>
-                    </div>
-                <div class="year"><span>2024</span></div>
-                <div class="article-image">
-                    <img src="images/pics/MET.png" alt="Calorie Counter">
-                </div>
-            </div>
-            <div class="article-float">
-                <div class="empty-space"></div>
-                <div class="article-info">
-                    <h3>Real Estate Marketplace Platform</h3>
-                    <p>A clean and modern web platform built for property listings and searches. 
-                Features include filtering, responsive design, and dynamic data loading. 
-                Ideal for agencies or freelance property managers.</p>
-                </div>
-                <div class="year"><span>2024</span></div>
-                <div class="article-image">
-                    <img src="images/pics/realEstate2.png" alt="Real Estate Marketplace Platform">
-                </div>
-            </div>
-            <div class="article-container">
-                <div class="empty-space"></div>
-
-                <article class="article-info">
-                    <h3>SkyHouse — Construction Company Website</h3>
-                    <p>A modern company website with sections for services, projects, contact, and about. 
-                Built with clean design principles and responsive layout, this project showcases how a digital presence can reflect a brand's professionalism.</p>
-                </article>
-                <div class="year"><span>2024</span></div>
-                <div class="article-image">
-                    <img src="images/pics/devCo.png" alt="SkyHouse — Construction Company Website">
-                </div>   
-            </div>
-        </div>
-    </section>
+    
     <section class="partners">
         <h2>Partner Companies</h2>
         <div class="partners-container">
